# mlh-township

./: README.md  WebRTC.md  docker-compose.yml
.github/workflows/: python-lint.yml
client/: Dockerfile  package-lock.json  package.json
client/public/: girlSpriteSheet.json  index.html
client/src/: App.js  ChatBox.css  ChatBox.js  Town.css  Town.js  index.css
server/: .dockerignore  .gitignore  Dockerfile  README.md  app.js  app.py  config.py  go.mod  package-lock.json  package.json  pyproject.toml
server/server/: __init__.py  active_players.py  main.py  player.py
server/server/templates/: test.html
