[tool.poetry]
name = "server"
version = "0.1.0"
description = ""
authors = ["awalvie <agrawal.vishesh.178@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^1.1.2"
python-dotenv = "^0.15.0"
flask-socketio = "^4.3.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
